# leetgpu-solutions

./: .gitignore  CMakeLists.txt  README.md  fetch_stubs.py
challenges/color-inversion/: cuda.cu  tinygrad.py  torch.py
challenges/vector-addition/: solution-pytorch.py  solution-tinygrad.py
kitchen/cmake/: CUDAConfig.cmake
kitchen/include/: common.cuh
kitchen/scripts/: bench.py
template/: CMakeLists.txt  solution.cu
vector-addition/: solution-pytorch.py  solution-tinygrad.py  solution.cu
